Modified templates to display posts from database3.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -29,4 +29,10 @@
             </div>
         </div>
     </body>
+    
+    <style>
+      body {
+        background: #eeeeee;
+      }
+    </style>
 </html>
